--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,8 @@ net-literals = "~0.1"
 net2 = "~0.2.31"
 quick-error = "~1.2"
 rand = "~0.3.18"
-rust_sodium = "~0.7"
-secure_serialisation = "~0.5.0"
+rust_sodium = "~0.9"
+secure_serialisation = { git = "https://github.com/Mrmaxmeier/secure_serialisation"}
 serde = "~1.0"
 serde_derive = "~1.0"
 tokio-core = "~0.1.10"
